--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -8,6 +8,9 @@ bind-key C-t send-prefix
 set -g allow-rename off
 set -g history-limit 10000
 
+# having trouble with $PATH not sourcing when starting tmux
+set -g default-command /usr/bin/zsh
+
 # search mode vi
 set-window-option -g mode-keys vi
 
