--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -29,5 +29,13 @@ bind-key l select-pane -R
 bind-key V split-window -h
 bind-key H split-window -v
 
+# THEME
+set -g status-bg black
+set -g status-fg white
+set -g status-interval 60
+set -g status-left-length 30
+set -g status-left '#[fg=green][#S] #(whoami) '
+set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+
 # easy config reload
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded!"
